# vizopt

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  TODO  TODO.md  pyproject.toml  zensical.toml
.claude/: settings.json
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/: api.md  concepts.md  getting-started.md  index.md
docs/blog/: introducing-star-bubbles.md
docs/blog/scripts/: gen_circle_nesting.py  gen_enclosure_geometry.py  gen_radially_convex_sets.py  gen_rectangle_nesting.py
examples/: circle_packing.ipynb  color_optimization.ipynb  examples_with_bubbles.ipynb  layered_graph_layouts.ipynb  nested_circles.ipynb  optimize_label_positions.ipynb  simple_collision.ipynb  star.ipynb  star_curriculum.ipynb
examples/d3/: README.md  index.html  viz.js
notebooks/: README.md  color_optimization.ipynb  examples_with_bubbles.ipynb  optimize_label_positions.ipynb
notebooks/examples/: circle_packing.ipynb  layered_graph_layouts.ipynb  raster_based.ipynb  rectangle_packing.ipynb  simple_collision.ipynb  star.ipynb  star_and_circle.ipynb  star_and_star.ipynb  star_bubble_illustrations.ipynb
notebooks/experiments/: circle_euler_initialization.ipynb  examples_with_bubbles.ipynb  init_strategy_benchmark.ipynb  milp_rectangles.ipynb  optuna_hyperparams.ipynb  raster_based.ipynb  star_and_rectangle.ipynb  star_and_star.ipynb  star_bubble_illustrations.ipynb  star_curriculum.ipynb  star_languages.ipynb  supranational_orgs.ipynb
scripts/: convert_all_notebooks.py  convert_all_notebooks_to_md.py  convert_all_notebooks_to_py.py  nb_to_md.py
src/vizopt/: __init__.py  animation.py  base.py  bubblejax.py  color.py  components.py  jaxopt.py  milp_euler_rectangles.py  radially_convex.py  schedules.py  treemap.py  utils.py
src/vizopt/components/: bspline_stars.py  stars.py
src/vizopt/examples/: sets.py
src/vizopt/templates/: circle_packing.py  color.py  label_positions.py  layered_graph.py  nested_circles.py  radially_convex.py  raster_stars.py  star_vs_star.py  stars_vs_circles.py
src/vizopt/templates/euler/: __init__.py  graph_utils.py  stars_vs_circles.py  stars_vs_rectangles.py
tests/: test_base.py  test_star_representation.py  test_templates.py
