[project]
name = "vizopt"
version = "0.0.2"
description = "Mathematical optimization for data visualization"
authors = [
    { name = "Spectalizer", email = "spectalizer@protonmail.com" },
]
readme = "README.md"
urls = {repository = "https://github.com/spectalizer/vizopt/" }
requires-python = ">=3.13,<3.14.1"
dependencies = [
    "jax==0.9.1",
    "matplotlib>=3.10.8",
    "networkx>=3.6.1",
    "optax>=0.2.6",
    "pandas>=3.0.0",
    "pydantic>=2.12.5",
]

[dependency-groups]
hyperoptim = [
    "optuna>=4.0.0",
]
dev = [
    "black>=26.1.0",
    "ipykernel>=7.1.0",
    "mkdocstrings-python>=2.0.3",
    "nbconvert>=7.0.0",
    "nbformat>=5.0.0",
    "pandas-stubs>=3.0.0.260204",
    "pytest>=9.0.2",
    "types-networkx>=3.6.1.20260210",
    "zensical>=0.0.24",
]

[[tool.mypy.overrides]]
module = ["optax", "optax.*", "jax", "jax.*"]
ignore_missing_imports = true

[build-system]
requires = ["uv_build>=0.9.27,<0.10.0"]
build-backend = "uv_build"
